# super_mario_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/gui/: frame.cpp  frame.hpp
src/lib/logging/: logger.cpp  logger.hpp
src/lib/models/: TileMapObjects.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp  tile.cpp  tile.hpp  tile_map_objects.hpp  toadstool.cpp  toadstool.hpp
src/lib/services/: map_maker.cpp  map_maker.hpp  tile_maker.cpp  tile_maker.hpp  tile_map_maker.cpp  tile_map_maker.hpp
tests/: CMakeLists.txt  main.cpp
tests/unit_tests/lib/models/: player_tests.cpp  player_tests.hpp
